[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Images/inventory_icons/Magic/health potion.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/Projectiles/Hitbox.gd" type="Script" id=2]
[ext_resource path="res://World/Objects/Projectiles/PotionProjectile.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="Curve" id=2]
min_value = -200.0
max_value = 400.0
_data = [ Vector2( 0, 75.6757 ), 0.0, 1093.5, 0, 0, Vector2( 0.228546, 151.736 ), -914.189, -914.189, 0, 0, Vector2( 1, -167.568 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
max_value = 2.5
_data = [ Vector2( 0, 2.49732 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.22348 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 0.803922, 0.803922, 1, 1, 0.00392157, 0.00392157, 1 )

[sub_resource type="Curve" id=5]
max_value = 3.0
_data = [ Vector2( 0, 2.73165 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.73165 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=6]
radius = 64.0

[node name="PotionProjectile" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="TrailParticles" type="Node2D" parent="."]

[node name="P3" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
position = Vector2( -23, 0 )
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 12, 4 )
direction = Vector2( -1, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 1, 0.505882, 0.505882, 1 )

[node name="P2" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
position = Vector2( -23, 0 )
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 32, 4 )
direction = Vector2( -1, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 1, 0.00392157, 0.00392157, 1 )

[node name="P1" type="CPUParticles2D" parent="TrailParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
position = Vector2( -23, 0 )
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 32, 4 )
direction = Vector2( -1, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0.501961, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="ExplosionParticles" type="Node2D" parent="."]

[node name="Explosion" type="CPUParticles2D" parent="ExplosionParticles"]
modulate = Color( 1.12, 1.12, 1.12, 1 )
emitting = false
amount = 400
lifetime = 2.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.7
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.2
angular_velocity = 0.1
angular_velocity_random = 1.0
orbit_velocity = 0.1
orbit_velocity_random = 1.0
linear_accel = 50.0
linear_accel_random = 0.5
linear_accel_curve = SubResource( 2 )
radial_accel = 0.05
radial_accel_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="Shards" type="CPUParticles2D" parent="ExplosionParticles/Explosion"]
modulate = Color( 1.12, 1.12, 1.12, 1 )
emitting = false
amount = 200
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 40 )
initial_velocity = 10.0
initial_velocity_random = 0.2
angular_velocity = 0.3
angular_velocity_random = 1.0
orbit_velocity = 0.3
orbit_velocity_random = 1.0
linear_accel = 50.0
linear_accel_random = 0.5
linear_accel_curve = SubResource( 2 )
radial_accel = 0.1
radial_accel_random = 1.0
scale_amount = 2.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 4 )

[node name="PotionHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PotionHitbox"]
shape = SubResource( 6 )
disabled = true
